# reg3n

./: .env  .gitignore  =3.9.0  HFT_SYSTEM_REORGANIZATION_PLAN.md  README.md  SIMPLE_HFT_README.md  __init__.py  active_symbols.py  adaptive_data_filter.py  alpaca.py  alpaca_momentum_executor.py  build_simple.sh  cache.py  data_manager.py  database.py  dataset.py  enhanced_backtest_analytics.py  ensemble_manager.py  feature_engineering.py  fetch_polygon_data.py  gap_n_go.py  historical_data_adapter.py  kelly_position_sizer.py  lag_llama_engine.py  lag_llama_trainer.py  main.py  mean_reversion.py  ml_ensemble_system.py  model_versioning_schema.sql  online_learning.py  orb.py  polygon.py  polygon_client.py  process_calibration_data.py  production_backtester.py  production_lag_llama_test.py  production_lag_llama_test_real_data.py  pyrightconfig.json  reg3n_hft.py  reg3n_hft_run.py  (+17 more)
.roo/: mcp.json
ai_llama/: GH200_OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  config.py  install_gh200.sh  main.py  requirements.txt  setup.py  test_ensemble.py  test_logging.py
ai_llama/data/: __init__.py  alpaca_client.py  data_pipeline.py  polygon_client.py
ai_llama/execution/: __init__.py  order_manager.py  risk_manager.py
ai_llama/features/: __init__.py  fast_features.py  gap_features.py  orb_features.py  vol_features.py
ai_llama/models/: __init__.py  cache.py  chronos_engine.py  ensemble.py  fast_models.py  lag_llama_engine.py  timesfm_engine.py
ai_llama/strategies/: __init__.py  gap_and_go.py  orb_strategy.py  vol_mean_reversion.py
ai_llama/tests/: __init__.py
ai_llama/utils/: __init__.py  logger.py
build_simple/: simple_hft
data_pipeline/: __init__.py  polygon_rest_api.py  polygon_websocket.py
datasets/: AMD_dataset_20250615_141524.json  CRCL_dataset_20250615_141526.json  PLTR_dataset_20250615_141523.json  QQQ_dataset_20250615_141528.json  SPY_dataset_20250615_141527.json  datasets_summary.json
filters/: __init__.py  adaptive_data_filter.py  entry_timing_optimizer.py  momentum_consistency_filter.py  vix_position_scaler.py
lag_llama/gluon/: estimator.py
legacy/: CMakeLists.txt  README.md  alpaca_client.cpp  alpaca_client.hpp  beast_http_client.cpp  beast_http_client.hpp  build.sh  config.hpp  hft-optimize.service  hft_engine.hpp  hft_models.hpp  main.cpp  market_data.hpp  memory_manager.hpp  optimize_system.sh  order_engine.hpp  run_hft_optimized.sh  system_baseline.txt  websocket_client.cpp  websocket_client.hpp
legacy/kernel_module/: .Module.symvers.cmd  .hft_kernel_module.ko.cmd  .hft_kernel_module.mod.cmd  .hft_kernel_module.mod.o.cmd  .hft_kernel_module.o.cmd  .modules.order.cmd  Makefile  Makefile.kernel  hft_kernel_module.c  hft_kernel_module.ko  hft_kernel_module.mod.c  modules.order
ml_models/: __init__.py  adaptive_data_processor.py  ensemble_manager.py  feature_engineering.py  model_server.py  online_learning.py
models/__pycache__/: fast_models.linear_predict-14.py310.1.nbc  fast_models.linear_predict-14.py310.nbi  fast_models.linear_predict-19.py310.1.nbc  fast_models.linear_predict-19.py310.nbi  fast_models.rsi_signal-63.py310.1.nbc  fast_models.rsi_signal-63.py310.nbi  fast_models.rsi_signal-68.py310.1.nbc  fast_models.rsi_signal-68.py310.nbi  fast_models.simple_momentum_signal-32.py310.1.nbc  fast_models.simple_momentum_signal-32.py310.nbi  fast_models.simple_momentum_signal-37.py310.1.nbc  fast_models.simple_momentum_signal-37.py310.nbi
models/gluon_utils/: __init__.py
models/gluon_utils/gluon_ts_distributions/: __init__.py
models/gluon_utils/scalers/: __init__.py
models/lag_llama/: lag-llama
tests/: test_polygon_integration.py
trading_pipeline/: __init__.py  alpaca_rest_api.py  alpaca_websocket.py  kelly_position_sizer.py  momentum_execution_engine.py
utils/: __init__.py  system_logger.py
yaml/: __init__.py  data_pipeline.yaml  filters.yaml  ml_models.yaml  tests.yaml  trading_pipeline.yaml  utils.yaml
